src/objects/PSA_File_Convert__c.object
<CustomObject>
    <description>Used to store attachments to be converted as well as the conversion status of each attachment</description>
    <fields>
        <fullName>PSA_Attachment_Parent_Id__c</fullName>
        <description>Salesforce Id of the related Attachment Parent</description>
        <inlineHelpText>Salesforce Id of the related Attachment Parent</inlineHelpText>
        <label>Attachment Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Batch_Number__c</fullName>
        <description>Groups a list of attachments that will need to be done converting before a combined expense receipt document can be generated</description>
        <inlineHelpText>Groups a list of attachments that will need to be done converting before a combined expense receipt document can be generated</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Batch_Type__c</fullName>
        <description>Used to indicate which object the converted files will be related to when they are combined into a pdf document</description>
        <inlineHelpText>Used to indicate which object the converted files will be related to when they are combined into a pdf document</inlineHelpText>
        <label>Batch Type</label>
        <picklist>
            <picklistValues>
                <fullName>BillingEvent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExpenseReport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Conversion_Job_Id__c</fullName>
        <description>Job Id assigned by the file conversion service -- used to retrieve converted files</description>
        <inlineHelpText>Job Id assigned by the file conversion service -- used to retrieve converted files</inlineHelpText>
        <label>Conversion Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Conversion_Status__c</fullName>
        <description>Status of the file conversion -- as formatted by the file conversion service</description>
        <inlineHelpText>Status of the file conversion -- as formatted by the file conversion service</inlineHelpText>
        <label>Conversion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Expense record</description>
        <inlineHelpText>Lookup to the related Expense record</inlineHelpText>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>PSA File Convert</relationshipLabel>
        <relationshipName>PSA_File_Convert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_File_Convert_HTTP_Response__c</fullName>
        <description>Http Response from the file conversion service -- may be useful for debugging</description>
        <inlineHelpText>Http Response from the file conversion service -- may be useful for debugging</inlineHelpText>
        <label>File Convert HTTP Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_File_Convert_Status_HTTP_Response__c</fullName>
        <description>Http Response from the file conversion service when doing a status request -- may be useful for debugging</description>
        <inlineHelpText>Http Response from the file conversion service when doing a status request -- may be useful for debugging</inlineHelpText>
        <label>File Convert Status HTTP Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Source_Attachment_Id__c</fullName>
        <description>Salesforce Id of the related source Attachment record</description>
        <inlineHelpText>Salesforce Id of the related source Attachment record</inlineHelpText>
        <label>Source Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Source_File_Job_Id__c</fullName>
        <description>Id of the source file -- set by the file conversion service</description>
        <inlineHelpText>Id of the source file -- set by the file conversion service</inlineHelpText>
        <label>Source File Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Source_File_Name__c</fullName>
        <description>Name of the source file passed to the file conversion service</description>
        <inlineHelpText>Name of the source file passed to the file conversion service</inlineHelpText>
        <label>Source File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Target_File_Count__c</fullName>
        <description>The number of converted files, excluding any .zip files</description>
        <inlineHelpText>The number of converted files, excluding any .zip files</inlineHelpText>
        <label>Target File Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Target_File_Job_Id__c</fullName>
        <description>Id of the target (converted) file as set by the file conversion service</description>
        <inlineHelpText>Id of the target (converted) file as set by the file conversion service</inlineHelpText>
        <label>Target File Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Target_Format__c</fullName>
        <description>List of eligible conversion formats for the target file</description>
        <inlineHelpText>List of eligible conversion formats for the target file</inlineHelpText>
        <label>Target Format</label>
        <picklist>
            <picklistValues>
                <fullName>png</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jpg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSA File Convert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PSA_Batch_Number__c</columns>
        <columns>PSA_Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>PSA_Attachment_Parent_Id__c</columns>
        <columns>PSA_Conversion_Job_Id__c</columns>
        <columns>PSA_Conversion_Status__c</columns>
        <columns>PSA_Expense__c</columns>
        <columns>PSA_Source_Attachment_Id__c</columns>
        <columns>PSA_Source_File_Name__c</columns>
        <columns>PSA_Target_File_Job_Id__c</columns>
        <columns>PSA_Target_Format__c</columns>
        <columns>PSA_File_Convert_HTTP_Response__c</columns>
        <columns>PSA_File_Convert_Status_HTTP_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FCN-{000000}</displayFormat>
        <label>File Convert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA File Convert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>